// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's addDetailView destination action: all fields 1`] = `
Object {
  "additionalData": Object {
    "testType": "nW8&[lpB",
  },
  "cascadeCreate": true,
  "duration": -5422425906872320,
  "itemId": "nW8&[lpB",
  "recommId": "nW8&[lpB",
  "timestamp": "nW8&[lpB",
  "userId": "nW8&[lpB",
}
`;

exports[`Testing snapshot for Recombee's addDetailView destination action: required fields 1`] = `
Object {
  "cascadeCreate": true,
  "itemId": "nW8&[lpB",
  "userId": "nW8&[lpB",
}
`;
